<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentDailouge.ReccurenceFragment"
    android:padding="15dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recurring_event_date_picker"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/frequency"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="13dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_daily"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/radio_weekly"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/weekly" />
        <RadioButton
            android:id="@+id/radio_monthly"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/monthly" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/date_range"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="13dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical">
        <ImageView
            android:visibility="visible"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_calender"
            android:tint="@color/colorPrimary"/>

        <Button
            android:id="@+id/bt_from_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_edge_gray"
            android:hint="@string/From_Date"
            android:textAllCaps="false"
            android:textColorHint="@color/gray"
            android:textColor="@color/colorAccent"/>
        <Button
            android:id="@+id/bt_to_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_edge_gray"
            android:hint="@string/to_Date"
            android:textAllCaps="false"
            android:textColorHint="@color/gray"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Repeat_on"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="13dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">
            <Button
                android:id="@+id/bt_mon"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Mon"
                android:background="@drawable/round_gray_without_edge"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/bt_tue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Tue"
                android:background="@drawable/round_gray_without_edge"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/bt_wed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Wed"
                android:background="@drawable/round_gray_without_edge"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/bt_thu"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Thu"
                android:background="@drawable/round_gray_without_edge"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/bt_fri"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Fri"
                android:background="@drawable/round_gray_without_edge"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/bt_sat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Sat"
                android:background="@drawable/round_gray_without_edge"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/bt_sun"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Sun"
                android:background="@drawable/round_gray_without_edge"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_number_of_occurrences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number_of_occurrences"
        android:textStyle="bold"
        android:textSize="13dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp">
        <Button
            android:visibility="gone"
            android:id="@+id/bt_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_edge_gray"
            android:text="@string/clear"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/bt_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ripple"
            android:text="@string/update"
            android:textColor="#fff"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

</LinearLayout>