<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/rounded_top_corners"
    android:elevation="4dp">

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/light_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        android:textSize="17sp"
        android:textColor="@color/black"
        style="@style/medium_font"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_want_to_cancel"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        style="@style/medium_font"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/hash"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtYes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Yes"
            android:textColor="@color/colorPrimary"
            android:textSize="13dp"
            style="@style/medium_font"
            android:gravity="center"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="40dp"
            android:background="@color/hash"/>
        <TextView
            android:id="@+id/txtNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/No"
            android:textColor="@color/colorPrimary"
            android:textSize="13dp"
            style="@style/medium_font"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hash"/>

</LinearLayout>