<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#007FFFD4"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="#ffffff" />

        <TextView
            style="@style/regular_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/are_you_sure_do_you_want_to_delete"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#868686" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtYes"
                style="@style/bold_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#868686" />

            <TextView
                android:id="@+id/txtNo"
                style="@style/bold_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/no"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
