<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".FragmentDailouge.ReccuringNewFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="18dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/Recurring_event_date_picker"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/frequency"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_daily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/radio_weekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/radio_monthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monthly" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/date_range"
        android:textColor="@color/black"
        android:textSize="13dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_calender"
            android:tint="@color/colorPrimary"
            android:visibility="visible" />

        <Button
            android:id="@+id/bt_from_date"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_edge_gray"
            android:hint="@string/From_Date"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_to_date"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_edge_gray"
            android:hint="@string/to_Date"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_wall_clock"
            android:visibility="visible" />

        <Button
            android:id="@+id/bt_time"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_edge_gray"
            android:hint="Time"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_duration"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_edge_gray"
            android:hint="Duration"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/gray"
            android:textSize="12sp" />
    </LinearLayout>

    <!--    daily or weekly-->
    <RelativeLayout
        android:id="@+id/relative_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


    <TextView
        android:id="@+id/txt_occurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Occurs every day"
        android:textSize="12sp" />


    <!--    monthly-->
    <LinearLayout
        android:id="@+id/linear_monthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radio_on_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="On day" />

        <RadioButton
            android:id="@+id/radio_on_the_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="On the first" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_edge_gray"
            android:text="@string/clear"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:text="@string/update"
            android:textColor="#fff"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>